[workspace]
members = [
    "examples",
    "webrender",
    "webrender_api",
    "wrench",
    "example-compositor/compositor",
]

[workspace.dependencies]
glean = "=61.2.0"
# FIXME: need to add x11 and wayland to features?
glutin = { version = "0.29", default-features = false }
winit = { version = "0.27", default-features = false }

[profile.release]
debug = true
panic = "abort"

[profile.dev]
panic = "abort"

# optimizing glsl more makes a big difference in swgl build times
[profile.dev.package.glsl]
opt-level = 2

[profile.release.package.glsl]
opt-level = 2

[patch.crates-io]
firefox-on-glean = { path = "fog" }
